--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 body {
   background: #efefef;
 }
-header, .name, .offer, .cars, .partnership, .mix, .contact_hours {
+.name, .offer, .cars, .partnership, .mix, .contact_hours {
   background: #ffffff;
 }
 h1 {
-  position: absolute;
   width: 187px;
   height: 82px;
   left: 47px;
@@ -25,16 +24,8 @@ h2 {
 a, .menu, .offer, .cars, .partnership, .mix, address, .hours {
   color: #666666;
 }
-header {
-  height: 123px;
-  width: 1180px;
-  margin: 0 auto;
-  position: relative;
-  box-shadow: 0 0 15px #aaa;
-}
+
 .menu {
-  position: relative;
-  width: 100%;
   text-align: right;
   padding: 70px 10px 0px 10px;
   font-size: 20px;
@@ -50,11 +41,9 @@ a:visited {
   color: #666666;
   text-decoration: none;
 }
-section:not(.maps) {
-  width: 1180px;
-  margin: 0 auto;
-  box-shadow: 0 0 15px #aaa;
-}
+
+  /*box-shadow: 0 0 15px #aaa;*/
+
 .photo_plac {
   background-image: url("img/plac.jpg");
 }
@@ -63,29 +52,20 @@ section:not(.maps) {
 }
 .photo_plac, .photo_dachowki {
   height: 220px;
-  width: 588px;
+  width: 100%;
   background-repeat: no-repeat;
   display:inline-block;
 }
-.content{
-  width: 1180px;
-}
 .name {
   font-size: 15px;
-  float:left;
   margin: 15px 0 10px 0;
   padding: 15px;
-  width: 45%;
   text-align: center;
   background-color: #2c276c;
   color: #fff;
   box-shadow: 0 0 5px #ccc;
 }
-.offer, address, .hours {
-  width: 50%;
-}
 .offer {
-  float: right;
   list-style-type: none;
   margin: 15px 0 0 0;
   padding: 15px;
@@ -108,17 +88,12 @@ section:not(.maps) {
   margin: 10px;
 }
 .cars, .partnership, .mix {
-  width: 48%;
   box-shadow: 0 0 5px #ccc;
 }
 .cars {
-  float: left;
   margin: 10px 0 0 0;
   padding: 15px;
   text-align: center;
-}
-.partnership {
-  float:left;
 }
 .partnership, .mix {
   padding: 15px;
@@ -129,13 +104,6 @@ section:not(.maps) {
 }
 .mix {
   margin-top: 15px;
-  float: left;
-  clear: left;
-}
-.clearfix {
-  position: relative;
-  width: 100%;
-  clear: both;
 }
 #contact_hours {
   margin-top: 25px;
@@ -145,13 +113,11 @@ address {
   display: inline-block;
 }
 .hours {
-  float: right;
   padding: 0 0 70px 30px;
   display: inline-block;
 }
 .maps {
   padding: 10px 10px 10px 0;
-  clear: both;
 }
 .contact_rent {
   text-decoration: underline;
@@ -159,10 +125,4 @@ address {
 iframe {
   width: 100%;
   height: 400px;
-}
-.offer ul.fundamenty li, ul.docieplenia li {
-  display: block;
-}
-ul li img {
-  height: 20px;
 }
