--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ a, .menu, .offer, .cars, .partnership, .mix, address, .hours {
   font-family: 'Asap', sans-serif;
 }
 .menu li {
-  display: inline-block;
   margin-left: 20px;
 }
 a:visited {
@@ -64,22 +63,20 @@ a:visited {
   height: 220px;
   width: 100%;
   background-repeat: no-repeat;
-  display:inline-block;
+}
+.name, .offer {
+  box-shadow: 0 0 5px #ccc;
 }
 .name {
   font-size: 15px;
   margin: 15px 0 10px 0;
-  padding: 15px;
   text-align: center;
   background-color: #2c276c;
   color: #fff;
-  box-shadow: 0 0 5px #ccc;
 }
 .offer {
   list-style-type: none;
   margin: 15px 0 0 0;
-  padding: 15px;
-  box-shadow: 0 0 5px #ccc;
 }
  .name {
   width: 92%;
@@ -87,7 +84,7 @@ a:visited {
 .cars, .partnership, .mix, .contact_hours, iframe {
   width: 97%;
 }
-.cars, .partnership, .mix, .contact_hours {
+.cars, .partnership, .mix, .contact_hours, .offer, .name {
   padding: 15px;
 }
 .cars {
@@ -103,7 +100,7 @@ a:visited {
 .mix, .contact_hours, iframe {
   margin-top: 15px;
 }
-address, .hours, .offer div ul li {
+address, .hours, .offer div ul li, .menu li, .photo_plac, .photo_dachowki {
   display: inline-block;
 }
 .hours {
