--- a/style.css
+++ b/style.css
@@ -131,12 +131,13 @@ iframe {
 .offer div {
   clear:both;
 }
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 991px) {
     .photo_plac, .photo_dachowki {
       display: none;
     }
     .menu {
      float: left;
+     text-align: center;
    }
    .top {
      height:auto;
@@ -144,5 +145,14 @@ iframe {
    .name, .top, .menu {
     width: 97%;
     margin: 0 0 0 0;
+  }
+}
+@media only screen and (max-width: 626px) {
+  .menu li {
+    display: block;
+    text-decoration: none;
+  }
+  .menu {
+    padding: 40px 10px 20px 10px;
   }
 }
